# rules_fish

./: BUILD.bazel  MODULE.bazel  README.md
.github/: CODEOWNERS
fish/: BUILD.bazel  BUILD.fish.bazel  BUILD.pcre2.bazel  download.bzl  extension.bzl  rlocation.sh  toolchain.bzl  validate_test.sh
rules_fish/: BUILD.fish.bazel  bazel.fish  download.bzl  fish.bzl  fish_wrapper.sh
tests/e2e/bzlmod/: .gitignore  BUILD.bazel  MODULE.bazel  hello_world.fish  interactive.fish
