module(name = "rules_fish_bcr_tests")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.9")

bazel_dep(name = "rules_fish", version = "", repo_name = "rules_fish")
local_path_override(
    module_name = "rules_fish",
    path = "../../..",
)

fish = use_extension("@rules_fish//fish:extension.bzl", "fish_shell")
fish.toolchain(version = "3.7.1")
use_repo(fish, "fish_toolchains")
register_toolchains("@fish_toolchains//:all")
